--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,21 @@
---- #YAML:1.0
-name:               load
-version:            0.20
-abstract:           load - control when subroutines will be loaded
+---
+abstract: 'load - control when subroutines will be loaded'
 author:
-    - Elizabeth Mattijsen (liz@dijkmat.nl)
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Elizabeth Mattijsen (liz@dijkmat.nl)'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:  {}
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: load
+no_index:
+  directory:
+    - t
+    - inc
+requires: {}
+version: 0.21
